node-name.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nodename
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: con1
        image: nginx:latest
        ports:
        - containerPort: 80
      nodeName: node1
