node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nspod
  labels:
    app: myapp
spec:
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
  nodeSelector:
     cpu: ryzen
