pod-aff-pref.yaml
apiVersion: v1
kind: Pod
metadata:
  name: paff-pref
  labels:
    app: myapp
spec:
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
  affinity:
    podAntiAffinity:  # Affinity antiaffinity define here 
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 100
        podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: app
              operator: In
              values:
              - green
          topologyKey: kubernetes.io/hostname
