pod-aff-req.yaml
apiVersion: v1
kind: Pod
metadata:
  name: paff-req
  labels:
    app: myapp
spec:
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
  affinity:
    podAffinity:  # Affinity antiaffinity define here 
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: app
            operator: In
            values:
            - green
        topologyKey: kubernetes.io/hostname
