pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vpod
spec:
  containers:
    - name: con1
      image: nginx
      volumeMounts:
      - mountPath: "/var/www/html"
        name: mypd
  volumes:
    - name: mypd
      persistentVolumeClaim:
        claimName: myclaim
