res-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: mango
  name: mango
  namespace: devops
spec:
  containers:
  - image: nginx
    name: test
    resources: 
      requests:
        cpu: 200m
        memory: 256Mi
      limits:
        cpu: 800m
        memory: 512Mi
