taint-tol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    app: green
spec:
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
  tolerations:
  - key: taint  #node-role.kubernetes.io/control-plane
    operator: "Equal"
    value: green    # delete this line
    effect: NoExecute   #NoSchedule

        node-role.kubernetes.io/control-plane:NoSchedule
