emptydir.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: emdep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: con1
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: myvol
          mountPath: /data
      - name: con2
        image: tomcat:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: myvol
          mountPath: /app
      volumes:
      - name: myvol
        emptyDir: {}


---
apiVersion: v1
kind: Service
metadata:
  name: mydep-svc
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30123
